# engineering-calcs

./: .gitignore  PROJECT_SCOPE.md  README.md  pyproject.toml  requirements.txt  run.sh
.devcontainer/: devcontainer.json
data/: materials.json
src/: config.py  main.py
src/core/: __init__.py  calculations.py  units.py  validation.py
src/data/: database.py  models.py
src/domains/: __init__.py  controls.py  cross_sections.py  fatigue.py  fluids.py  materials.py  mechanical.py  statics.py  thermo.py  trusses.py  vibrations.py
src/services/: __init__.py  chart_service.py  formula_diagrams.py  report_service.py  search_service.py  truss_visualization.py  user_settings.py
src/ui/: __init__.py  app.py
src/ui/components/: __init__.py  inputs.py  outputs.py
src/ui/pages/: __init__.py  calculate.py  dashboard.py  history.py  settings.py
